Changelog for collective.editskinswitcher
=========================================

  (name of developer listed in brackets)

collective.editskinswitcher - 0.2 (Unreleased)
----------------------------------------------

- Add based_on_url property (default: True).  When True, the skin
  switching is done when you visit the site via an edit url.  When
  combined with need_authentication=True, only logged-in users on the
  edit url get the edit skin.
  [maurits]

- Add need_authentication property (default: False).  When True, the
  skin switching is only done when you are authenticated (logged in).
  [maurits]

- In the base test cases, create the new default skin.
  [maurits]

- Split tests/setup.txt in two files for separating some unrelated
  tests.
  [maurits]

- Add a more readable README.txt and move the old one into the
  tests directory as it contains most of our tests.
  [maurits]


collective.editskinswitcher - 0.1 (Released 25 January 2008)
------------------------------------------------------------

- Add a property sheet editskin_switcher with property edit_skin.
  Default value: Plone Default.  Use that for determining which
  skin to give to editors.
  [maurits]

- Initial package structure.
  [zopeskel]